--- a/palette.html
+++ b/palette.html
@@ -5,7 +5,7 @@ Christine Delacourt 14/02/2023 -->
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<link rel="stylesheet" href="./public/css/style.css">
+<link rel="stylesheet" href="./public/css/prefixed/style.css">
 <script src="https://kit.fontawesome.com/852a711ee8.js" crossorigin="anonymous"></script>
 <title>palette</title>
 </head>
