--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Christine Delacourt 14/02/2023 -->
             </div> <!--class="ville"-->
             <h1>Réservez le menu qui<br>vous convient</h1>
             <h3>Découvrez des restaurants d'exception,<br>sélectionnés par nos soins.</h3>
-            <h2>Explorez nos restaurants</h2>
+            <button class="btn--1">Explorez nos restaurants</button>
             <section class="fonctionnement">
                 <h1>Fonctionnement</h1>
                 <ul class="liste-fonctionnement">
@@ -125,7 +125,7 @@ Christine Delacourt 14/02/2023 -->
                 <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
-                <a href="#">Contact</a>
+                <a href="mailto:christine.delacourt@laposte.net">Contact</a>
             </nav> <!-- class="container-footer"-->
         </footer>
     </div> <!-- class="conteneur-main"-->
