--- a/palette.html
+++ b/palette.html
@@ -160,7 +160,7 @@ Christine Delacourt 14/02/2023 -->
                 </ul>
             </section> <!--class="menu"-->
         </section> <!--class="liste-menu"-->
-                    <button class="btn">Commander</button>
+                    <button class="btn--2">Commander</button>
         </main>
         <footer>
             <h3>Ohmyfood</h3>
@@ -168,7 +168,7 @@ Christine Delacourt 14/02/2023 -->
                 <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
-                <a href="#">Contact</a>
+                <a href="mailto:christine.delacourt@laposte.net">Contact</a>
             </nav> <!-- class="container-footer"-->
         </footer>
     </div> <!-- class="conteneur-main"-->
