--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ Christine Delacourt 14/02/2023 -->
             <section class="fonctionnement">
                 <h1>Fonctionnement</h1>
                 <ul class="liste-fonctionnement">
-                    <li><text>1</text><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
-                    <li><text>2</text><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                    <li><text>3</text><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+                    <li><h6>1</h6><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
+                    <li><h6>2</h6><i class="fa-solid fa-list"></i>Composez votre menu</li>
+                    <li><h6>3</h6><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
                 </ul>
             </section>
                 <section class="restaurants">
